--- a/haszowanie.html
+++ b/haszowanie.html
@@ -31,7 +31,7 @@
             if (username === "" && password === "") {
               alert("Zalogowano pomyślnie!");
               window.location.href = "https://www.bing.com/videos/riverview/relatedvideo?&q=polska+niemcy+2016+mecz+skr%c3%b3t&&mid=9228B0F029D1489E8EFA9228B0F029D1489E8EFA&&FORM=VRDGAR"
-            } else {
+            } else 
                 window.location.href = "https://www.bing.com/videos/riverview/relatedvideo?&q=polska+niemcy+2016+mecz+skr%c3%b3t&&mid=9228B0F029D1489E8EFA9228B0F029D1489E8EFA&&FORM=VRDGAR"           }
           });
           
