--- a/haszowanie.html
+++ b/haszowanie.html
@@ -28,7 +28,7 @@
             var password = document.getElementById("password").value;
       
             // Sprawdź, czy podane dane są poprawne
-            if (username === "" && password === "") {
+            if (username === "kot" && password === "aaa") {
               alert("Zalogowano pomyślnie!");
               window.location.href = "https://www.bing.com/videos/riverview/relatedvideo?&q=polska+niemcy+2016+mecz+skr%c3%b3t&&mid=9228B0F029D1489E8EFA9228B0F029D1489E8EFA&&FORM=VRDGAR"
             } else 
