--- a/haszowanie.html
+++ b/haszowanie.html
@@ -28,11 +28,11 @@
             var password = document.getElementById("password").value;
       
             // Sprawdź, czy podane dane są poprawne
-            if (username === "kot" && password === "aaa") {
+            if (username === "" && password === "") {
               alert("Zalogowano pomyślnie!");
-              window.location.href = "https://www.bing.com/videos/riverview/relatedvideo?&q=polska+niemcy+2016+mecz+skr%c3%b3t&&mid=9228B0F029D1489E8EFA9228B0F029D1489E8EFA&&FORM=VRDGAR"
-            } else 
-                window.location.href = "https://www.bing.com/videos/riverview/relatedvideo?&q=polska+niemcy+2016+mecz+skr%c3%b3t&&mid=9228B0F029D1489E8EFA9228B0F029D1489E8EFA&&FORM=VRDGAR"           }
+              window.location.href = "https://www.bing.com/videos/riverview/relatedvideo?&q=polska+niemcy+2016+mecz+skr%c3%b3t&&mid=E4865053C65D4AAE4B67E4865053C65D4AAE4B67&&FORM=VRDGAR"
+            } else {
+                window.location.href = "https://www.bing.com/videos/riverview/relatedvideo?&q=polska+niemcy+2016+mecz+skr%c3%b3t&&mid=E4865053C65D4AAE4B67E4865053C65D4AAE4B67&&FORM=VRDGAR"            }
           });
           
         </script>
